<resources>
    <string name="app_name">DailyTuner</string>

    <!--Strings related to Registration-->
    <string name="reg_username">User Name</string>
    <string name="reg_email">Registered Email</string>
    <string name="reg_mobile_num">Mobile Number</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_pass">confirm Password</string>
    <string name="reg_submit">Submit</string>
    <string name="login_submit">Login</string>
    <string name="user_reigistered_success">User Registered Successfully</string>

    <!--Strings related to validations -->
    <string name="empty_username">please Enter User Name</string>
    <string name="empty_email">please Enter Email</string>
    <string name="email">Email Address</string>
    <string name="empty_email_register">please Enter Registered Email</string>
    <string name="empty_mobile_num">please Enter MobileNumber</string>
    <string name="empty_password">please Enter Password</string>
    <string name="empty_confpassword">please Enter Confirm Password</string>
    <string name="check_passwords">Passwords do not match</string>
    <string name="validation_email">Please enter valid Email</string>
    <string name="validation_mobilenum">Mobile number should be minimum 10 digits</string>
    <string name="validation_password">Password should be minimum six(6) characters</string>

    <string name="newuser">New User Registration</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="account">Already have an Account?</string>
    <string name="toolbar_registration">Registration</string>
    <string name="toolbar_login">Login</string>
    <string name="toolbar_accountinfo">Account Information</string>
    <string name="swayam_logo">Swayam logo</string>
    <string name="navigation_Acitivitieslist">My Activities</string>
    <string name="navigation_change_password">Change Password</string>
    <string name="navigation_about">AboutUs</string>
    <string name="navigation_signout">Signout</string>
    <string name="change_password">Change Password</string>
    <string name="change_success">Password changed successfully</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="success_update">updated successfully</string>
    <string name="dialog_loading">Loading</string>
    <string name="passsword_change_fail">Password change failed</string>
    <string name="login_updated_password">please login with updated password</string>
    <string name="empty_new_password">Please enter new password</string>
    <string name="toolbar_title_myactivities">My Activities</string>
    <string name="toolbar_title_edit_user_details">Edit User Details</string>
    <string name="toolbar_title_login">Login</string>
    <string name="message_reset_password">Please use the below password to reset:</string>
    <string name="email_subject">Reset Password</string>
    <string name="choose_intent_email">choose a email client</string>
    <string name="toolbar_title_Registration">Registration</string>
    <string name="toolbar_title_change_password">Change Password</string>
    <string name="toolbar_title_aboutus">AboutUs</string>
    <string name="message_login">Please Enter vaild details</string>
    <string name="message_udpdate_username_mobile_success">Updated successfully</string>
    <string name="message_udpdate_username_mobile_failure">Updated failed</string>
    <string name="message_login_failed">Login failed</string>
    <string name="message_login_success">login success</string>
    <string name="toolbar_title_userslist">Activities List</string>
    <string name="url">http://www.swayamdigital.com/</string>
    <string name="navigation_users_list">Users list</string>
    <string name="toolbar_title_users_list">Users List</string>
    <string name="login_invalid">invalid credentials</string>
    <string name="resetPassword">password reset link sent to your Registered Email, Please check!</string>

    <style name="invalid_credentials">Invalid Credentials</style>
</resources>
