<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_app"
        android:contentDescription="@string/swayam_logo"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etUserName"
            style="@style/EditTextStyle"
            android:hint="@string/reg_username"
            android:inputType="textCapSentences|textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
       android:id="@+id/TextInputMobileNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etMobileNum"
            style="@style/EditTextStyle"
            android:hint="@string/reg_mobile_num"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
       android:id="@+id/TextInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:hint="@string/reg_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_text_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etConfPassword"
            style="@style/EditTextStyle"
            android:hint="@string/reg_confirm_pass"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/ButtonStyle"
        android:layout_marginTop="10dp"
        android:text="@string/reg_submit" />

    <TextView
        android:id="@+id/txtExistingAccount"
        style="@style/TextViewStyle"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/account"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:padding="3dp"
        android:background="?attr/selectableItemBackground"
        android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>